upgrade-jetty-9.4.x (upgrade-jetty-9.4.x):  * e000fba [Marco Nova] Updated notice.txt and version.txt  * a4afa7b [Marco Nova] Merge branch 'master' into upgrade-jetty-9.4.x  * 0fb397a [Marco Nova] we have now the same features of the previous v7 plugin.  * 984017d [Marco Nova] JettyAggregatedRunMojo created as a copy of JettyRunMojo  * 416c017 [Marco Nova] original 9.4.46.v20220331 jetty version